force-app/main/default/objects/Thread__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sikkerhetshendelse</fullName>
            </value>
            <value>
                <fullName>Utenfor NAVs behandlingsområde</fullName>
            </value>
            <value>
                <fullName>Andre årsaker</fullName>
            </value>
            <value>
                <fullName>Ikke statlig dialog</fullName>
            </value>
            <value>
                <fullName>Sendt feil bruker</fullName>
            </value>
            <value>
                <fullName>Sensitive personopplysninger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>