force-app/main/default/objects/Thread__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account the thread relates to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Threads</relationshipLabel>
    <relationshipName>Threads</relationshipName>
    <type>Lookup</type>
</CustomField>