force-app/main/default/objects/Thread__c/fields/CRM_API_Reference__c.field-meta.xml
<CustomField>
    <fullName>CRM_API_Reference__c</fullName>
    <description>Record reference that is exposed via API</description>
    <externalId>true</externalId>
    <label>API Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>