force-app/main/default/objects/Thread__c/fields/CRM_Assignee__c.field-meta.xml
<CustomField>
    <fullName>CRM_Assignee__c</fullName>
    <description>Defines if an new message from external should assign a new NAV task directly to a NAV-ident.</description>
    <label>Assignee</label>
    <length>7</length>
    <type>Text</type>
</CustomField>