force-app/main/default/objects/Thread__c/fields/CRM_Assignee_NAV_Unit__c.field-meta.xml
<CustomField>
    <fullName>CRM_Assignee_NAV_Unit__c</fullName>
    <description>NAV unit of the assignee</description>
    <label>Assignee NAV Unit</label>
    <length>7</length>
    <type>Text</type>
</CustomField>