force-app/main/default/objects/Thread__c/fields/CRM_Case__c.field-meta.xml
<CustomField>
    <fullName>CRM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Threads</relationshipLabel>
    <relationshipName>Threads</relationshipName>
    <type>Lookup</type>
</CustomField>