force-app/main/default/objects/Thread__c/fields/CRM_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>CRM_Closed_By__c</fullName>
    <description>Used in henvendelses-API to see who closed the Thread.</description>
    <externalId>true</externalId>
    <label>Closed By</label>
    <length>48</length>
    <type>Text</type>
</CustomField>