force-app/main/default/objects/Thread__c/fields/CRM_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Closed_Date__c</fullName>
    <description>Datetime when the thread was closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>