force-app/main/default/objects/Thread__c/fields/CRM_Contact__c.field-meta.xml
<CustomField>
    <fullName>CRM_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact initiating the dialogue</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Threads</relationshipLabel>
    <relationshipName>Threads</relationshipName>
    <type>Lookup</type>
</CustomField>