force-app/main/default/objects/Thread__c/fields/CRM_Conversation_Summary__c.field-meta.xml
<CustomField>
    <fullName>CRM_Conversation_Summary__c</fullName>
    <description>Text field containing a summary of the conversation on the thread so far.</description>
    <label>Conversation Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>