force-app/main/default/objects/Thread__c/fields/CRM_Created_By_Ident__c.field-meta.xml
<CustomField>
    <fullName>CRM_Created_By_Ident__c</fullName>
    <description>NAV ident of the user creating the thread.</description>
    <externalId>true</externalId>
    <label>Created By Ident</label>
    <length>48</length>
    <type>Text</type>
</CustomField>