force-app/main/default/objects/Thread__c/fields/CRM_Disposal_Datetime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Disposal_Datetime__c</fullName>
    <description>Datetime for when the record if marked for disposal and the written contents will be should be removed.</description>
    <label>Disposal Datetime</label>
    <type>DateTime</type>
</CustomField>