force-app/main/default/objects/Thread__c/fields/CRM_External_ActorId__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_ActorId__c</fullName>
    <description>Text field to define which party is the external. Field is populated with the persons actor id</description>
    <externalId>true</externalId>
    <label>External Actor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>