force-app/main/default/objects/Thread__c/fields/CRM_External_ActorId_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_ActorId_Formula__c</fullName>
    <description>Resolves the actor ID from the related person record.</description>
    <formula>CRM_Account__r.CRM_Person__r.INT_ActorId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Actor ID Formula</label>
    <type>Text</type>
</CustomField>