force-app/main/default/objects/Thread__c/fields/CRM_External_Person_Ident__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_Person_Ident__c</fullName>
    <description>Text field to define which party is the external. Field is populated with the persons ident (FNR)</description>
    <externalId>true</externalId>
    <label>External Person Ident</label>
    <length>11</length>
    <type>Text</type>
</CustomField>