force-app/main/default/objects/Thread__c/fields/CRM_External_Person_Ident_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_External_Person_Ident_Formula__c</fullName>
    <description>Resolves the FNR from the related person record.</description>
    <formula>CRM_Account__r.CRM_Person__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Person Ident Formula</label>
    <type>Text</type>
</CustomField>