force-app/main/default/objects/Thread__c/fields/CRM_Incorrectly_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRM_Incorrectly_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marking if the thread was sent incorrectly to NAV.</description>
    <label>Incorrectly Sent</label>
    <type>Checkbox</type>
</CustomField>