force-app/main/default/objects/Thread__c/fields/CRM_Incorrectly_Sent_Activated_By__c.field-meta.xml
<CustomField>
    <fullName>CRM_Incorrectly_Sent_Activated_By__c</fullName>
    <description>NAV ident of the user activating marking the thread av incorrectly sent</description>
    <externalId>true</externalId>
    <label>Incorrectly Sent Activated By</label>
    <length>7</length>
    <type>Text</type>
</CustomField>