force-app/main/default/objects/Thread__c/fields/CRM_isActive__c.field-meta.xml
<CustomField>
    <fullName>CRM_isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>