force-app/main/default/objects/Thread__c/fields/CRM_Journal_Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Case_Reference__c</fullName>
    <label>Journal Case Reference</label>
    <length>32</length>
    <type>Text</type>
</CustomField>