force-app/main/default/objects/Thread__c/fields/CRM_Journal_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Status__c</fullName>
    <description>Depicts the journal status of the conversation note. By default no journal entry is created.</description>
    <label>Journal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Journaled</fullName>
                <default>true</default>
                <label>Not Journaled</label>
            </value>
            <value>
                <fullName>Journal Started</fullName>
            </value>
            <value>
                <fullName>Journal Error</fullName>
            </value>
            <value>
                <fullName>Journal Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>