force-app/main/default/objects/Thread__c/fields/CRM_Latest_Message_Datetime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Latest_Message_Datetime__c</fullName>
    <label>Latest Message Datetime</label>
    <type>DateTime</type>
</CustomField>