force-app/main/default/objects/Thread__c/fields/CRM_Number_of_unread_Messages_by_NAV__c.field-meta.xml
<CustomField>
    <fullName>CRM_Number_of_unread_Messages_by_NAV__c</fullName>
    <label>Number of unread Messages by NAV</label>
    <summaryFilterItems>
        <field>Message__c.CRM_Read_By_Nav__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Message__c.CRM_Type__c</field>
        <operation>equals</operation>
        <value>Message</value>
    </summaryFilterItems>
    <summaryForeignKey>Message__c.CRM_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>