force-app/main/default/objects/Thread__c/fields/CRM_Office_Restriction__c.field-meta.xml
<CustomField>
    <fullName>CRM_Office_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the conversation note read access is restricted to the original NAV office.</description>
    <label>Office Restriction</label>
    <type>Checkbox</type>
</CustomField>