force-app/main/default/objects/Thread__c/fields/CRM_Office_Restriction_Unit__c.field-meta.xml
<CustomField>
    <fullName>CRM_Office_Restriction_Unit__c</fullName>
    <label>Office Restriction Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>