force-app/main/default/objects/Thread__c/fields/CRM_Recipient__c.field-meta.xml
<CustomField>
    <fullName>CRM_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Thread_Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>