force-app/main/default/objects/Thread__c/fields/CRM_Registered_Datetime_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_Registered_Datetime_Formula__c</fullName>
    <description>Returns the date and time the thread was created. For data which was migrated this results in the timestamp from the Date time registered field, after migration this defaults to system timestamps.</description>
    <formula>IF(ISBLANK(CRM_Date_Time_Registered__c),
			 CreatedDate,
			 CRM_Date_Time_Registered__c
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Datetime Formula</label>
    <type>DateTime</type>
</CustomField>