force-app/main/default/objects/Thread__c/fields/CRM_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>CRM_Related_Object__c</fullName>
    <externalId>true</externalId>
    <label>Related Object</label>
    <length>18</length>
    <type>Text</type>
</CustomField>