force-app/main/default/objects/Thread__c/fields/CRM_Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Related_Object_Type__c</fullName>
    <description>Describes to object type of the related object</description>
    <label>Related Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>