force-app/main/default/objects/Thread__c/fields/CRM_Related_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>CRM_Related_Record_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +   CRM_Related_Object__c,  &apos;Gå til relatert post&apos; )</formula>
    <label>Related Record Link</label>
    <type>Text</type>
</CustomField>