force-app/main/default/objects/Thread__c/fields/CRM_Theme__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to common code theme.</description>
    <label>Theme</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Common_Code__c.CRM_Code_Set__c</field>
            <operation>equals</operation>
            <value>Tema</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Common_Code__c</referenceTo>
    <relationshipLabel>Threads</relationshipLabel>
    <relationshipName>CRM_Threads_Theme</relationshipName>
    <type>Lookup</type>
</CustomField>