force-app/main/default/objects/Thread__c/fields/CRM_Theme_Group__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme Group</label>
    <referenceTo>Common_Code__c</referenceTo>
    <relationshipLabel>Threads (Theme Group)</relationshipLabel>
    <relationshipName>CRM_Threads</relationshipName>
    <type>Lookup</type>
</CustomField>