force-app/main/default/objects/Thread__c/fields/CRM_Theme_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Group_Code__c</fullName>
    <formula>CRM_Theme_Group__r.CRM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Group Code</label>
    <type>Text</type>
</CustomField>