force-app/main/default/objects/Thread__c/fields/CRM_Thread_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_Thread_Name_Formula__c</fullName>
    <formula>CASE(CRM_Type__c, 
&apos;HOT_BRUKER-FORMIDLER&apos;, Name, &apos;AAREG_EXP&apos;, Name,&apos;AAREG_INT&apos;, Name,
 CRM_Account__c )</formula>
    <label>Thread Name Formula</label>
    <type>Text</type>
</CustomField>