force-app/main/default/objects/Thread__c/fields/CRM_Thread_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Thread_Type__c</fullName>
    <label>Thread Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEFAULT</fullName>
                <default>true</default>
                <label>DEFAULT</label>
            </value>
            <value>
                <fullName>STO</fullName>
            </value>
            <value>
                <fullName>STB</fullName>
            </value>
            <value>
                <fullName>CHAT</fullName>
            </value>
            <value>
                <fullName>AAREG_EXP</fullName>
            </value>
            <value>
                <fullName>AAREG_INT</fullName>
            </value>
            <value>
                <fullName>AG_MLØNN</fullName>
            </value>
            <value>
                <fullName>HOT_BRUKER-FORMIDLER</fullName>
            </value>
            <value>
                <fullName>BTO</fullName>
            </value>
            <value>
                <fullName>HOT_BRUKER-TOLK</fullName>
            </value>
            <value>
                <fullName>HOT_BESTILLER-FORMIDLER</fullName>
            </value>
            <value>
                <fullName>HOT_TOLK-FORMIDLER</fullName>
            </value>
            <value>
                <fullName>HOT_TOLK-RESSURSKONTOR</fullName>
            </value>
            <value>
                <fullName>HOT_BRUKER-BESTILLER</fullName>
            </value>
            <value>
                <fullName>HOT_TOLK-TOLK</fullName>
            </value>
            <value>
                <fullName>HOT_TJENESTELEVERANDOR-FORMIDLER</fullName>
            </value>
            <value>
                <fullName>HOT_TJENESTELEVERANDOR-TOLK</fullName>
            </value>
            <value>
                <fullName>HOT_TJENESTELEVERANDOR-HONORAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>