force-app/main/default/objects/Thread__c/fields/CRM_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Type__c</fullName>
    <externalId>true</externalId>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>