force-app/main/default/objects/Thread__c/fields/INT_ActorId__c.field-meta.xml
<CustomField>
    <fullName>INT_ActorId__c</fullName>
    <label>Actor Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>