force-app/main/default/objects/Thread__c/fields/Journaled__c.field-meta.xml
<CustomField>
    <fullName>Journaled__c</fullName>
    <formula>CASE(CRM_Journal_Status__c,
&apos;Journal Completed&apos;, &apos;Ja&apos;,
&apos;Journal Error&apos;, &apos; Nei&apos;,
&apos;Nei&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journaled</label>
    <type>Text</type>
</CustomField>