force-app/main/default/objects/Thread__c/fields/Redaction_Person_Ident__c.field-meta.xml
<CustomField>
    <fullName>Redaction_Person_Ident__c</fullName>
    <formula>CRM_Account__r.CRM_Person__r.Name</formula>
    <label>Person Ident</label>
    <type>Text</type>
</CustomField>