force-app/main/default/objects/Thread__c/fields/STO_Category__c.field-meta.xml
<CustomField>
    <fullName>STO_Category__c</fullName>
    <description>Category defined when dialogue is initated from end user. Used for routin among else.</description>
    <label>STO Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>STO_Category</valueSetName>
    </valueSet>
</CustomField>