force-app/main/default/objects/Thread__c/fields/STO_Disability_Campaign__c.field-meta.xml
<CustomField>
    <fullName>STO_Disability_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disability Campaign</label>
    <type>Checkbox</type>
</CustomField>