force-app/main/default/objects/Thread__c/fields/STO_ExternalName__c.field-meta.xml
<CustomField>
    <fullName>STO_ExternalName__c</fullName>
    <formula>IF(CRM_Type__c=&apos;STO&apos;,
				IF(ISBLANK( CRM_Closed_Date__c ), CRM_Theme_Group__r.Name &amp; &apos; - Skriv til oss&apos;, CRM_Theme_Group__r.Name &amp; &apos; - Skriv til oss: Henvendelsen er avsluttet&apos;),
			&apos;Chat&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STO - External Name</label>
    <type>Text</type>
</CustomField>