force-app/main/default/objects/Thread__c/fields/STO_Sensitive_Information__c.field-meta.xml
<CustomField>
    <fullName>STO_Sensitive_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field tagging a case if it somehow includes or related to a record including sensitive information that should be handled/processed</description>
    <label>Sensitive Information</label>
    <type>Checkbox</type>
</CustomField>