force-app/main/default/objects/Thread__c/recordTypes/NKS_Thread.recordType-meta.xml
<RecordType>
    <fullName>NKS_Thread</fullName>
    <active>true</active>
    <description>Record type used for threads related to Nav Kontaktsenter</description>
    <label>NKS Thread</label>
</RecordType>